test/units/TypingSpec/invalid/prog/untyped-lam-call-2.algst
-- FIXME: if we could get this to work, this would be great. However, this
-- conflicts with implicit resolution.
add : Int -> Int -> Int
add x y = (\a b  -> a + b) x y
